<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    tools:context=".presentation.ViewRecipe">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:maxHeight="500px"
                android:maxWidth="500px"
                android:minHeight="200px"
                android:minWidth="200px"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/burger" />

            <TextView
                android:id="@+id/des_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Description"
                android:textColor="#673AB7"
                android:textSize="48sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/des_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollY="1sp"
                android:text="TextView"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:text="Serving Size"
                    android:textAlignment="viewStart"
                    android:textColor="#673AB7"
                    android:textSize="34sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="#F1FEFF"
                    android:spinnerMode="dropdown" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="205dp"
                    android:layout_height="wrap_content"
                    android:text="Ingredients"
                    android:textColor="#673AB7"
                    android:textSize="34sp"
                    android:textStyle="bold" />


            </LinearLayout>


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ListView
                    android:id="@+id/listView_data"
                    android:layout_width="match_parent"

                    android:layout_height="match_parent"
                    android:background="#F1FEFF"
                    android:choiceMode="multipleChoice"
                    android:dividerHeight="5dp"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

            </RelativeLayout>


            <TextView
                android:id="@+id/direction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Direction"
                android:textColor="#673AB7"
                android:textSize="34sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/direction_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Rate The Dish"
                android:textColor="#673AB7"
                android:textSize="30sp"
                android:textStyle="bold" />

            <RatingBar
                android:id="@+id/ratingBar2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:progressBackgroundTint="@color/black"
                tools:ignore="SpeakableTextPresentCheck" />

            <Switch
                android:id="@+id/switch1"
                android:layout_width="241dp"
                android:layout_height="wrap_content"
                android:text="Fav Recipe"
                android:textColor="#673AB7"
                android:textSize="30sp"
                android:textStyle="bold"
                />

                


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
