<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/add_recipe_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Recipe Name"
        ></EditText>

    <Button
        android:id="@+id/button_add_ingredient"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="Add Ingredient +"
        ></Button>
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="170dp">
    <LinearLayout
        android:id="@+id/layout_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        

    </LinearLayout>
    </ScrollView>
    <EditText
        android:id="@+id/add_recipe_directions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Cooking Instructions "
        android:lines="5"

        ></EditText>




</LinearLayout>

